--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     ],
     "require": {
         "php": "^7.3",
-        "laravel-zero/framework": "^8.0"
+        "guzzlehttp/guzzle": "^6.5.5",
+        "illuminate/http": "^8.0",
+        "laravel-zero/framework": "^8.0",
+        "rtconner/freshbooks-api": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.2",
@@ -40,5 +43,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["application"]
+    "bin": ["minuteur-freshbooks"]
 }
